-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.5, 5.10.1, 5.11.0 Beta 3
-
Embedded Linux, Android, Touch Screen
-
1ecf2212fae176b78c9951a37df9e33eb24d4f2d (qt/qtbase/dev) 247586a046d83b7076f288fa4daedbf6ae2fb287 (qt/qtbase/6.2) c50313b7126917edeb335288153dd4a7290c8c3f (qt/qtbase/6.1) 7369c31ca1f446e81eda1c93ba13767ffcd83efe (qt/qtbase/6.2)
If the QGraphicsProxyWidget have a child widget, the touch events are not propagated to the child. Instead the touch events are sent to the widget which then will ignore the touch events and Qt starts synthesizing the touch events to the mouse events which are propagated to the child.
Steps to reproduce the issue:
1. Run attached sample project
Expected outcome:
The widget's child received the touch events.
Actual outcome:
The widget's child does not receive touch events.
- resulted in
-
QTBUG-125197 QWidget multitouch sometimes drops touch points
-
- Reported
-
-
QTBUG-115492 GestureRecognizer can not get Touch Update if consume Touch Begin
-
- Closed
-